SERVER-64535 Add clustered index information to collStats output